# Real-Estate-Price-Prediction

./: .dockerignore  .gitignore  app.py  config.toml  docker-compose.yml  dockerfile.api  dockerfile.streamlit  main.py  pipeline.py  pyproject.toml  readme.MD  real_estate_model_pipeline.joblib  sandbox.ipynb
1. Data Collection/: OLX_Scraper.py  OTODOM_Scraper.py
data/cleanup/: raw_olx_23032025155859.csv  raw_otodom_23032025211344.csv  raw_otodom_30032025191652.csv
data/processed/: v1_2025_04_30.csv  v1_2025_05_23.csv
data/raw/: otodom_20250622_110948.csv  otodom_20250628_164644.csv  raw_olx_23032025155859.csv  raw_olx_30032025162011.csv  raw_otodom_23032025211344.csv
data/tmp/: page_0005_145134.csv  page_0005_145508.csv  page_0010_145221.csv  page_0010_145553.csv  page_0015_145310.csv  page_0015_145640.csv  page_0020_145340.csv  page_0020_145709.csv  page_0025_145745.csv  page_0030_145829.csv  page_0035_145913.csv  page_0040_150001.csv  page_0045_150049.csv  page_0050_150141.csv  page_0055_150230.csv  page_0060_150317.csv  page_0065_150406.csv  page_0070_150444.csv  page_0075_150530.csv  page_0080_150619.csv  page_0085_150705.csv  page_0090_150751.csv  page_0095_150838.csv  page_0100_150927.csv
models/: X_pipeline_1.4.joblib  X_pipeline_1.5.joblib  model_1.4.joblib  model_1.5.joblib  real_estate_full_pipeline_1.3.joblib  real_estate_model_components_1.1.joblib  real_estate_model_components_1.2.joblib  real_estate_model_pipeline_1.1.joblib  y_scaler_1.3.joblib  y_scaler_1.4.joblib
notebooks/: eda.ipynb  features_engineer_v0.pkl  initial_cleanup.ipynb  model_training_selection.ipynb  process_feature_sandbox.ipynb
notebooks/.ipynb_checkpoints/: initial_cleanup-checkpoint.ipynb
notebooks/models/: X_pipepline_.joblib  model_.joblib  y_scaler_.joblib
src/data_collection/: OLX_Scraper.py  OTODOM_Crawler.py  OTODOM_Scraper.py
src/data_preprocessing/: data_processor.py  feature_engineer.py  features_engineer_v0.pkl
(+12 files in other folders)
