[project]
name = "real_estate_price_prediction"
version = "0.1.0"
description = "ML end-to-end project focus on MLOps, models build from scratch and application"
authors = [
    {name = "sztyberj",email = "jakub.sztyber.97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
